--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"description": "",
 	"main": "index.js",
 	"dependencies": {
-		"cypress": "^8.6.0"
+		"cypress": "^8.6.0",
+		"faker": "^5.5.3"
 	},
 	"devDependencies": {
 		"prettier": "2.4.1"
