--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
 		"prettier": "2.4.1"
 	},
 	"scripts": {
-		"cypress:open": "./node_modules/.bin/cypress open"
+		"cypress:open": "./node_modules/.bin/cypress open",
+		"cypress:run": "./node_modules/.bin/cypress run"
 	},
 	"repository": {
 		"type": "git",
